Implement arithmetic tube